Add mean and variance along the trajectory

--- a/experiments/Energy Based.ipynb
+++ b/experiments/Energy Based.ipynb
@@ -11,31 +11,31 @@
      "text": [
       "Train on 60000 samples\n",
       "Epoch 1/10\n",
-      "60000/60000 [==============================] - 24s 398us/sample - loss: 0.4606 - accuracy: 0.8645\n",
+      "60000/60000 [==============================] - 27s 445us/sample - loss: 0.4606 - accuracy: 0.8645\n",
       "Epoch 2/10\n",
-      "60000/60000 [==============================] - 17s 289us/sample - loss: 0.3394 - accuracy: 0.9016\n",
+      "60000/60000 [==============================] - 19s 320us/sample - loss: 0.3394 - accuracy: 0.9016\n",
       "Epoch 3/10\n",
-      "60000/60000 [==============================] - 17s 291us/sample - loss: 0.2971 - accuracy: 0.9141\n",
+      "60000/60000 [==============================] - 19s 318us/sample - loss: 0.2971 - accuracy: 0.9141\n",
       "Epoch 4/10\n",
-      "60000/60000 [==============================] - 18s 293us/sample - loss: 0.2840 - accuracy: 0.9167\n",
+      "60000/60000 [==============================] - 21s 351us/sample - loss: 0.2840 - accuracy: 0.9167\n",
       "Epoch 5/10\n",
-      "60000/60000 [==============================] - 18s 308us/sample - loss: 0.2621 - accuracy: 0.9236\n",
+      "60000/60000 [==============================] - 20s 326us/sample - loss: 0.2621 - accuracy: 0.9236\n",
       "Epoch 6/10\n",
-      "60000/60000 [==============================] - 19s 323us/sample - loss: 0.2486 - accuracy: 0.9277\n",
+      "60000/60000 [==============================] - 20s 334us/sample - loss: 0.2486 - accuracy: 0.9277\n",
       "Epoch 7/10\n",
-      "60000/60000 [==============================] - 19s 322us/sample - loss: 0.2425 - accuracy: 0.9307\n",
+      "60000/60000 [==============================] - 20s 340us/sample - loss: 0.2425 - accuracy: 0.9307\n",
       "Epoch 8/10\n",
-      "60000/60000 [==============================] - 20s 332us/sample - loss: 0.2384 - accuracy: 0.9315\n",
+      "60000/60000 [==============================] - 21s 342us/sample - loss: 0.2384 - accuracy: 0.9315\n",
       "Epoch 9/10\n",
-      "60000/60000 [==============================] - 20s 338us/sample - loss: 0.2794 - accuracy: 0.9201\n",
+      "60000/60000 [==============================] - 21s 343us/sample - loss: 0.2794 - accuracy: 0.9201\n",
       "Epoch 10/10\n",
-      "60000/60000 [==============================] - 20s 331us/sample - loss: 0.5608 - accuracy: 0.8682\n"
+      "60000/60000 [==============================] - 21s 345us/sample - loss: 0.5608 - accuracy: 0.8682\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f7c826cfcd0>"
+       "<tensorflow.python.keras.callbacks.History at 0x7f71a6f50650>"
       ]
      },
      "execution_count": 1,
@@ -175,10 +175,10 @@
     {
      "data": {
       "text/plain": [
-       "[<tensorflow.python.keras.layers.core.Dense at 0x7f7c826b9d90>,\n",
-       " <__main__.MyLayer at 0x7f7c826cf850>,\n",
-       " <tensorflow.python.keras.layers.core.Dropout at 0x7f7c8003ac50>,\n",
-       " <tensorflow.python.keras.layers.core.Dense at 0x7f7c8001a910>]"
+       "[<tensorflow.python.keras.layers.core.Dense at 0x7f71a998a550>,\n",
+       " <__main__.MyLayer at 0x7f71a990f710>,\n",
+       " <tensorflow.python.keras.layers.core.Dropout at 0x7f71a725c3d0>,\n",
+       " <tensorflow.python.keras.layers.core.Dense at 0x7f71a725cb10>]"
       ]
      },
      "execution_count": 2,
@@ -2220,6 +2220,46 @@
    "source": [
     "i = 37\n",
     "visualize(trajectory.numpy()[i], labels_[i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mean, variance = tf.nn.moments(trajectory, axes=[-1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(51,), dtype=float32, numpy=\n",
+       "array([ 85.96451 , 168.65958 ,  79.73958 ,  63.055054,  60.58393 ,\n",
+       "        59.2137  ,  57.67141 ,  56.84723 ,  56.399254,  56.053078,\n",
+       "        55.905094,  55.650795,  55.44323 ,  55.278263,  55.146667,\n",
+       "        55.040623,  54.955593,  54.887505,  54.82968 ,  54.781723,\n",
+       "        54.741722,  54.724167,  54.708042,  54.693207,  54.679417,\n",
+       "        54.666203,  54.65345 ,  54.640797,  54.628796,  54.616455,\n",
+       "        54.605675,  54.594536,  54.58487 ,  54.574814,  54.56617 ,\n",
+       "        54.55711 ,  54.54938 ,  54.541225,  54.534317,  54.526962,\n",
+       "        54.520233,  54.514397,  54.508102,  54.502373,  54.49694 ,\n",
+       "        54.492313,  54.487183,  54.482296,  54.478394,  54.473995,\n",
+       "        54.470074], dtype=float32)>"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "var[10]"
    ]
   },
   {
