Rename RKSolver to RK4Solver, and collects solvers in `node.solvers`

--- a/experiments/Energy Based.ipynb
+++ b/experiments/Energy Based.ipynb
@@ -55,7 +55,7 @@
     "from IPython.display import HTML\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from node.core import get_node_function\n",
-    "from node.fix_grid import RKSolver\n",
+    "from node.solvers import RK4Solver\n",
     "from node.utils.trajectory import tracer, visualize_trajectory\n",
     "from node.energy_based import Energy, energy_based, identity\n",
     "\n",
@@ -88,7 +88,7 @@
     "        self._raw_pvf = lambda _, x: self._model(x)\n",
     "        self._energy = Energy(identity, self._raw_pvf)\n",
     "        self._pvf = energy_based(identity, self._energy)\n",
-    "        self._node_fn = get_node_function(RKSolver(self.dt, dtype=DTYPE),\n",
+    "        self._node_fn = get_node_function(RK4Solver(self.dt, dtype=DTYPE),\n",
     "                                          tf.constant(0., dtype=DTYPE),\n",
     "                                          self._pvf)\n",
     "\n",
@@ -178,7 +178,7 @@
    "source": [
     "my_layer_id = 1\n",
     "my_layer = model.layers[my_layer_id]\n",
-    "trace = tracer(RKSolver(0.1), my_layer._pvf)\n",
+    "trace = tracer(RK4Solver(0.1), my_layer._pvf)\n",
     "energy_fn = Energy(identity, my_layer._pvf)\n",
     "\n",
     "truncated_model = tf.keras.Sequential(model.layers[:my_layer_id])\n",
