--- a/experiments/Hopfield.ipynb
+++ b/experiments/Hopfield.ipynb
@@ -10,7 +10,7 @@
     "import numpy as np\n",
     "import tensorflow as tf\n",
     "from node.core import get_node_function\n",
-    "from node.fix_grid import RKSolver\n",
+    "from node.solvers import RK4Solver\n",
     "from node.utils.initializers import GlorotUniform\n",
     "\n",
     "\n",
@@ -85,7 +85,7 @@
     "    model = tf.keras.Sequential([\n",
     "        tf.keras.layers.Input([14, 14]),\n",
     "        RepeatLayer(num_filters),\n",
-    "        HopfieldLayer(num_filters, kernel_size, RKSolver(0.1), t),\n",
+    "        HopfieldLayer(num_filters, kernel_size, RK4Solver(0.1), t),\n",
     "        tf.keras.layers.Conv2D(1, 1),\n",
     "        tf.keras.layers.Reshape([14, 14])\n",
     "    ])\n",
