--- a/experiments/Hopfield Layer (snapshot).ipynb
+++ b/experiments/Hopfield Layer (snapshot).ipynb
@@ -3,7 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "name": "hopfield_layer_colab.ipynb",
+      "name": "Hopfield Layer.ipynb",
       "provenance": [],
       "collapsed_sections": []
     },
@@ -23,24 +23,24 @@
           "base_uri": "https://localhost:8080/",
           "height": 179
         },
-        "outputId": "da367ba8-2010-4d22-b6a7-462432931bf8"
+        "outputId": "6e640fc7-076f-47ec-b9ad-17559187b158"
       },
       "source": [
         "!pip install git+https://github.com/shuiruge/neural-ode.git@master"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
             "Collecting git+https://github.com/shuiruge/neural-ode.git@master\n",
-            "  Cloning https://github.com/shuiruge/neural-ode.git (to revision master) to /tmp/pip-req-build-l0ogcens\n",
-            "  Running command git clone -q https://github.com/shuiruge/neural-ode.git /tmp/pip-req-build-l0ogcens\n",
+            "  Cloning https://github.com/shuiruge/neural-ode.git (to revision master) to /tmp/pip-req-build-x_5eyx0p\n",
+            "  Running command git clone -q https://github.com/shuiruge/neural-ode.git /tmp/pip-req-build-x_5eyx0p\n",
             "Requirement already satisfied (use --upgrade to upgrade): node==0.1.0 from git+https://github.com/shuiruge/neural-ode.git@master in /usr/local/lib/python3.6/dist-packages\n",
             "Building wheels for collected packages: node\n",
             "  Building wheel for node (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for node: filename=node-0.1.0-cp36-none-any.whl size=37076 sha256=957310ad83e3b1dd87c222069289840cfc3b711b6ad804e595610474ffa91a5f\n",
-            "  Stored in directory: /tmp/pip-ephem-wheel-cache-5nycoqq3/wheels/36/41/e1/1cf7fd120543ff07c299bee3a2ce3fe659795c54f7e03fe9b6\n",
+            "  Created wheel for node: filename=node-0.1.0-cp36-none-any.whl size=37076 sha256=f5cee0fd290271ed7027484d8bf8e8f7fa7a2a7534706006f69ee73d4fbccdff\n",
+            "  Stored in directory: /tmp/pip-ephem-wheel-cache-6trp16vl/wheels/36/41/e1/1cf7fd120543ff07c299bee3a2ce3fe659795c54f7e03fe9b6\n",
             "Successfully built node\n"
           ],
           "name": "stdout"
@@ -56,12 +56,11 @@
           "base_uri": "https://localhost:8080/",
           "height": 53
         },
-        "outputId": "b3a32947-c50d-405b-be44-98acf1fe798a"
+        "outputId": "8a9b82ce-7242-4270-bb6d-f546ce5b8e89"
       },
       "source": [
         "import numpy as np\n",
         "import tensorflow as tf\n",
-        "\n",
         "from node.hopfield import ContinuousTimeHopfieldLayer\n",
         "                           \n",
         "# for reproducibility\n",
@@ -120,12 +119,12 @@
         "dataset = dataset.shuffle(1000).repeat(50).batch(128)\n",
         "model.fit(dataset)"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "23438/23438 [==============================] - 87s 4ms/step - loss: 0.0535 - acc: 0.9921\n"
+            "23438/23438 [==============================] - 195s 8ms/step - loss: 0.0528 - acc: 0.9922\n"
           ],
           "name": "stdout"
         },
@@ -133,7 +132,7 @@
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<tensorflow.python.keras.callbacks.History at 0x7febcc3a90f0>"
+              "<tensorflow.python.keras.callbacks.History at 0x7fded006a0b8>"
             ]
           },
           "metadata": {
@@ -162,120 +161,97 @@
           "base_uri": "https://localhost:8080/",
           "height": 935
         },
-        "outputId": "85a1b323-eb26-423a-fd50-28c39e7675ac"
+        "outputId": "fcaad701-a4b3-4fb6-bbdc-1362d018dc75"
       },
       "source": [
         "FLIP_RATIO = 0.3\n",
         "\n",
         "benchmark_model = get_benchmark_model(model)\n",
         "\n",
-        "def get_hopfield_layer_ids(model):\n",
-        "  return [\n",
-        "    i for i, layer in enumerate(model.layers)\n",
-        "    if isinstance(layer, ContinuousTimeHopfieldLayer)]\n",
-        "\n",
-        "hid = get_hopfield_layer_ids(model)[-1]\n",
-        "\n",
-        "X = tf.convert_to_tensor(x_train[-2000:])\n",
-        "targets = tf.argmax(tf.convert_to_tensor(y_train[-2000:]), axis=1)\n",
-        "noised_X = tf.where(tf.random.uniform(shape=X.shape) < FLIP_RATIO,\n",
+        "X = x_train[-2000:]\n",
+        "targets = np.argmax(y_train[-2000:], axis=1)\n",
+        "noised_X = np.where(np.random.random(size=X.shape) < FLIP_RATIO,\n",
         "                    -X, X)\n",
-        "unoised_y = tf.argmax(model.predict(X), axis=1)\n",
-        "y = tf.argmax(model.predict(noised_X), axis=1)\n",
-        "yb = tf.argmax(benchmark_model.predict(noised_X), axis=1)\n",
-        "\n",
-        "sub_model = tf.keras.Sequential(model.layers[:(hid + 1)])\n",
-        "sy1 = sub_model.predict(X)\n",
-        "sy2 = sub_model.predict(noised_X)\n",
-        "\n",
-        "ssub_model = tf.keras.Sequential(model.layers[:hid])\n",
-        "ssy1 = ssub_model.predict(X)\n",
-        "ssy2 = ssub_model.predict(noised_X)\n",
-        "\n",
-        "def get_error_ratio(original, noised, threshold=0.2):\n",
-        "  diff = original - noised\n",
-        "  ratio_per_sample = tf.reduce_mean(\n",
-        "    tf.cast(tf.abs(diff) > threshold, tf.float32), axis=1)\n",
-        "  return ratio_per_sample\n",
+        "unoised_y = np.argmax(model.predict(X), axis=1)\n",
+        "y = np.argmax(model.predict(noised_X), axis=1)\n",
+        "benchmark_y = np.argmax(benchmark_model.predict(noised_X), axis=1)\n",
         "\n",
         "num_misleading = 0\n",
         "num_corrected = 0\n",
         "num_uncorrected = 0\n",
-        "for i, (err0, err1, ybi, yi, uyi, ti) in enumerate(zip(\n",
-        "    get_error_ratio(ssy1, ssy2).numpy(),\n",
-        "    get_error_ratio(sy1, sy2).numpy(),\n",
-        "    yb, y, unoised_y, targets)):\n",
-        "  if yi == uyi and ybi != yi:\n",
+        "for i, (benchmark_yi, yi, unoised_yi, ti) in enumerate(zip(\n",
+        "    benchmark_y, y, unoised_y, targets)):\n",
+        "  if yi == unoised_yi and benchmark_yi != yi:\n",
         "    num_corrected += 1\n",
-        "  elif ybi == uyi and ybi != yi:\n",
+        "  elif benchmark_yi == unoised_yi and benchmark_yi != yi:\n",
         "    num_misleading += 1\n",
-        "  elif yi != uyi and ybi == yi:\n",
+        "  elif yi != unoised_yi and benchmark_yi == yi:\n",
         "    num_uncorrected += 1\n",
         "  else:\n",
         "    pass\n",
         "  if i < 50:\n",
-        "    print(f'{err0:.5f} => {err1:.5f} | {ybi} => {yi} | {uyi} ({ti})')\n",
+        "    print(f'{benchmark_yi} => {yi} | {unoised_yi} ({ti})')\n",
         "print(\n",
-        "  f'misleading: {num_misleading / X.shape[0]}',\n",
-        "  f'corrected: {num_corrected / X.shape[0]}',\n",
-        "  f'uncorrected: {num_uncorrected / X.shape[0]}')"
+        "  f'misleading ratio: {num_misleading / X.shape[0]}',\n",
+        "  f'corrected ratio: {num_corrected / X.shape[0]}',\n",
+        "  f'uncorrected ratio: {num_uncorrected / X.shape[0]}')"
       ],
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "0.80469 => 0.69531 | 2 => 9 | 2 (2)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (3)\n",
-            "0.80469 => 0.69531 | 0 => 2 | 9 (0)\n",
-            "0.80469 => 0.69531 | 7 => 2 | 9 (4)\n",
-            "0.80469 => 0.69531 | 1 => 2 | 9 (9)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (5)\n",
-            "0.80469 => 0.69531 | 1 => 2 | 9 (9)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (6)\n",
-            "0.00000 => 0.00000 | 5 => 9 | 9 (1)\n",
-            "0.00000 => 0.00000 | 7 => 9 | 9 (7)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (6)\n",
-            "0.80469 => 0.69531 | 5 => 9 | 2 (8)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (0)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (9)\n",
-            "0.80469 => 0.69531 | 9 => 2 | 9 (0)\n",
-            "0.00000 => 0.00000 | 0 => 2 | 2 (0)\n",
-            "0.00000 => 0.00000 | 2 => 2 | 2 (6)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (1)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (4)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (2)\n",
-            "0.80469 => 0.69531 | 5 => 2 | 9 (8)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (3)\n",
-            "0.00000 => 0.00000 | 7 => 9 | 9 (1)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (4)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (8)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (5)\n",
-            "0.80469 => 0.69531 | 2 => 9 | 2 (2)\n",
-            "0.00000 => 0.00000 | 5 => 2 | 2 (6)\n",
-            "0.80469 => 0.69531 | 1 => 2 | 9 (8)\n",
-            "0.00000 => 0.00000 | 0 => 9 | 9 (7)\n",
-            "0.00000 => 0.00000 | 2 => 9 | 9 (2)\n",
-            "0.80469 => 0.69531 | 6 => 9 | 2 (8)\n",
-            "0.00000 => 0.00000 | 2 => 9 | 9 (2)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (1)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (9)\n",
-            "0.00000 => 0.00000 | 2 => 9 | 9 (0)\n",
-            "0.00000 => 0.00000 | 7 => 9 | 9 (0)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (4)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (0)\n",
-            "0.80469 => 0.69531 | 9 => 9 | 2 (5)\n",
-            "0.80469 => 0.69531 | 0 => 9 | 2 (5)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (6)\n",
-            "0.00000 => 0.00000 | 7 => 9 | 9 (7)\n",
-            "0.00000 => 0.00000 | 0 => 9 | 9 (6)\n",
-            "0.80469 => 0.69531 | 2 => 9 | 2 (2)\n",
-            "0.00000 => 0.00000 | 8 => 2 | 2 (3)\n",
-            "0.80469 => 0.69531 | 5 => 9 | 2 (8)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (4)\n",
-            "0.80469 => 0.69531 | 1 => 9 | 2 (3)\n",
-            "0.00000 => 0.00000 | 1 => 9 | 9 (4)\n",
-            "misleading: 0.0365 corrected: 0.494 uncorrected: 0.037\n"
+            "3 => 1 | 1 (2)\n",
+            "7 => 1 | 1 (3)\n",
+            "0 => 5 | 1 (0)\n",
+            "5 => 5 | 1 (4)\n",
+            "5 => 5 | 1 (9)\n",
+            "7 => 1 | 5 (5)\n",
+            "7 => 1 | 5 (9)\n",
+            "5 => 5 | 5 (6)\n",
+            "1 => 1 | 1 (1)\n",
+            "1 => 1 | 1 (7)\n",
+            "5 => 5 | 5 (6)\n",
+            "7 => 5 | 1 (8)\n",
+            "7 => 5 | 5 (0)\n",
+            "5 => 5 | 5 (9)\n",
+            "7 => 1 | 1 (0)\n",
+            "1 => 1 | 1 (0)\n",
+            "8 => 1 | 5 (6)\n",
+            "7 => 1 | 1 (1)\n",
+            "4 => 1 | 1 (4)\n",
+            "1 => 1 | 1 (2)\n",
+            "5 => 5 | 1 (8)\n",
+            "5 => 5 | 1 (3)\n",
+            "1 => 1 | 1 (1)\n",
+            "7 => 1 | 1 (4)\n",
+            "5 => 5 | 1 (8)\n",
+            "5 => 5 | 5 (5)\n",
+            "2 => 1 | 1 (2)\n",
+            "7 => 1 | 5 (6)\n",
+            "1 => 1 | 1 (8)\n",
+            "7 => 1 | 1 (7)\n",
+            "1 => 1 | 1 (2)\n",
+            "5 => 5 | 1 (8)\n",
+            "2 => 1 | 1 (2)\n",
+            "3 => 5 | 1 (1)\n",
+            "5 => 5 | 5 (9)\n",
+            "7 => 1 | 1 (0)\n",
+            "5 => 1 | 1 (0)\n",
+            "7 => 5 | 1 (4)\n",
+            "5 => 5 | 1 (0)\n",
+            "5 => 1 | 5 (5)\n",
+            "1 => 5 | 5 (5)\n",
+            "5 => 1 | 5 (6)\n",
+            "8 => 1 | 1 (7)\n",
+            "1 => 1 | 5 (6)\n",
+            "5 => 5 | 1 (2)\n",
+            "5 => 5 | 1 (3)\n",
+            "0 => 1 | 5 (8)\n",
+            "5 => 5 | 1 (4)\n",
+            "7 => 1 | 1 (3)\n",
+            "7 => 5 | 5 (4)\n",
+            "misleading ratio: 0.0435 corrected ratio: 0.4305 uncorrected ratio: 0.1365\n"
           ],
           "name": "stdout"
         }
@@ -290,21 +266,21 @@
           "base_uri": "https://localhost:8080/",
           "height": 71
         },
-        "outputId": "93d3b8ff-08b7-4142-882b-78e0fd70bd55"
+        "outputId": "a6ca79d4-f28d-4d88-ba36-1bc8cf305c48"
       },
       "source": [
         "for layer in model.layers:\n",
         "  if isinstance(layer, ContinuousTimeHopfieldLayer):\n",
         "    print(layer._stop_condition.relax_time.numpy())"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "80.70676\n",
-            "104.49519\n",
-            "133.97269\n"
+            "267.9454\n",
+            "227.85867\n",
+            "282.02838\n"
           ],
           "name": "stdout"
         }
