Update Hopfield Layer via CNN.ipynb

--- a/experiments/Hopfield Layer via CNN.ipynb
+++ b/experiments/Hopfield Layer via CNN.ipynb
@@ -332,15 +332,20 @@
     }
    ],
    "source": [
-    "model.summary()  # XXX: Much much less number of parameters than the\n",
-    "                 # fully connected version."
+    "model.summary()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "* CNN version needs only ~ 10^2 parameters. Recall that dense version needs 10^7 parameters."
+    "## Conclusion\n",
+    "\n",
+    "1. CNN version needs only ~ 10^2 parameters. Recall that dense version needs 10^7 parameters.\n",
+    "\n",
+    "## References\n",
+    "\n",
+    "1. Cellular automata as convolutional neural networks (arXiv: 1809.02942)."
    ]
   }
  ],
