--- a/experiments/Hopfield Layer.ipynb
+++ b/experiments/Hopfield Layer.ipynb
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.4.0-dev20200804\n"
+      "2.4.0-dev20200901\n"
      ]
     }
    ],
@@ -133,7 +133,7 @@
     "\n",
     "    def build(self, input_shape):\n",
     "        depth = input_shape[-1]\n",
-    "        self._dense = tf.keras.layers.Dense(\n",
+    "        self._recon = tf.keras.layers.Dense(\n",
     "            units=depth,\n",
     "            activation=self.activation,\n",
     "            use_bias=self.use_bias,\n",
@@ -142,7 +142,7 @@
     "        super().build(input_shape)\n",
     "\n",
     "    def call(self, x, training=None):\n",
-    "        y = self._dense(x)\n",
+    "        y = self._recon(x)\n",
     "        if training:\n",
     "            return y\n",
     "        if self.binarize is not None:\n",
@@ -166,6 +166,74 @@
     "    w = (kernel + tf.transpose(kernel)) / 2\n",
     "    w = tf.linalg.set_diag(w, tf.zeros(kernel.shape[0:-1]))\n",
     "    return w\n",
+    "\n",
+    "\n",
+    "class ModernDenseRecon(NonidentityRecon):\n",
+    "    \"\"\"\n",
+    "    References\n",
+    "    ----------\n",
+    "    1. https://ml-jku.github.io/hopfield-layers/\n",
+    "    \n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    activation : callable\n",
+    "    binarize: callable, optional\n",
+    "        Binarization method for non-training process. If `None`, then no\n",
+    "        binarization.\n",
+    "    n : int, optional\n",
+    "        Number of patterns to learn. If `None`, then `memory` shall be\n",
+    "        provided.\n",
+    "    memory : array-like, optional\n",
+    "        Shape `[n, depth]` where `n` is the same as the argument `n`,\n",
+    "        and `depth` is the dimension of inputs. If `None`, then `n`\n",
+    "        shall be provided.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    def __init__(self,\n",
+    "                 activation,\n",
+    "                 binarize=None,\n",
+    "                 n=None,\n",
+    "                 memory=None,\n",
+    "                 **kwargs):\n",
+    "        super().__init__(**kwargs)\n",
+    "        \n",
+    "        if n is None and memory is None:\n",
+    "            raise ValueError('Either `n` or `memory` has to be provided.')\n",
+    "\n",
+    "        self.activation = activation\n",
+    "        self.binarize = binarize\n",
+    "        self.n = n\n",
+    "        self.memory = memory\n",
+    "\n",
+    "    def build(self, input_shape):\n",
+    "        depth = input_shape[-1]\n",
+    "        if self.memory is None:\n",
+    "            n = self.n\n",
+    "            initializer = 'glorot_uniform'\n",
+    "        else:\n",
+    "            n = self.memory.shape[0]\n",
+    "\n",
+    "            def initializer(_, dtype=None):\n",
+    "                return tf.constant(self.memory, dtype=dtype)\n",
+    "\n",
+    "        self.kernel = self.add_weight(name='kernel',\n",
+    "                                      shape=[n, depth],\n",
+    "                                      initializer=initializer,\n",
+    "                                      trainable=True)\n",
+    "        super().build(input_shape)\n",
+    "        \n",
+    "    def _recon(self, x):\n",
+    "        f = self.activation\n",
+    "        W = self.kernel\n",
+    "        return f(x @ tf.transpose(W)) @ W\n",
+    "\n",
+    "    def call(self, x, training=None):\n",
+    "        y = self._recon(x)\n",
+    "        if training:\n",
+    "            return y\n",
+    "        if self.binarize is not None:\n",
+    "            y = self.binarize(y)\n",
+    "        return y\n",
     "\n",
     "\n",
     "class Conv2dRecon(NonidentityRecon):\n",
@@ -282,15 +350,22 @@
     "\n",
     "        super().build(input_shape)\n",
     "\n",
+    "    def _learn(self, x):\n",
+    "        r = self.non_identity_recon(x)\n",
+    "        loss = tf.reduce_mean(tf.abs(x - r))\n",
+    "        return r, loss\n",
+    "\n",
+    "    def _update(self, x):\n",
+    "        t0 = tf.constant(0.)\n",
+    "        return self._node_fn(t0, x)\n",
+    "\n",
     "    def call(self, x, training=None):\n",
     "        if training:\n",
-    "            r = self.non_identity_recon(x)\n",
-    "            loss = tf.reduce_mean(tf.abs(x - r))\n",
+    "            y, loss = self._learn(x)\n",
     "            self.add_loss(self.reg_factor * loss)\n",
-    "            return r\n",
     "        else:\n",
-    "            t0 = tf.constant(0.)\n",
-    "            return self._node_fn(t0, x)\n",
+    "            y = self._update(x)\n",
+    "        return y\n",
     "\n",
     "\n",
     "class DiscreteTimeHopfieldLayer(tf.keras.layers.Layer):\n",
@@ -330,8 +405,21 @@
     "\n",
     "        self.final_step = tf.Variable(0, trainable=False)\n",
     "\n",
-    "    @tf.function\n",
+    "    def _learn(self, x):\n",
+    "        r = self.non_identity_recon(x, training=True)\n",
+    "        loss = tf.reduce_mean(tf.abs(x - r))\n",
+    "        return r, loss\n",
+    "\n",
     "    def _update(self, x):\n",
+    "        for step in tf.range(self.max_steps):\n",
+    "            next_x = self._update_step(x)\n",
+    "            if diff(next_x, x) < self.relax_tol:\n",
+    "                break\n",
+    "            x = next_x\n",
+    "        self.final_step.assign(step)\n",
+    "        return x\n",
+    "\n",
+    "    def _update_step(self, x):\n",
     "        y = self.non_identity_recon(x, training=False)\n",
     "        if self.async_ratio > 0:\n",
     "            # mask has no batch dim\n",
@@ -343,23 +431,32 @@
     "\n",
     "    def call(self, x, training=None):\n",
     "        if training:\n",
-    "            r = self.non_identity_recon(x, training=True)\n",
-    "            loss = tf.reduce_mean(tf.abs(x - r))\n",
+    "            y, loss = self._learn(x)\n",
     "            self.add_loss(self.reg_factor * loss)\n",
-    "            return r\n",
-    "\n",
     "        else:\n",
-    "            for step in tf.range(self.max_steps):\n",
-    "                next_x = self._update(x)\n",
-    "                if diff(next_x, x) < self.relax_tol:\n",
-    "                    break\n",
-    "                x = next_x\n",
-    "            self.final_step.assign(step + 1)\n",
-    "            return x\n",
+    "            y = self._update(x)\n",
+    "        return y\n",
     "\n",
     "\n",
     "def diff(x, y):\n",
-    "    return tf.reduce_max(tf.abs(x - y))"
+    "    return tf.reduce_max(tf.abs(x - y))\n",
+    "\n",
+    "\n",
+    "def tempered(T, fn):\n",
+    "    \"\"\"Converts f(x) to f(x/T).\n",
+    "\n",
+    "    Parameters\n",
+    "    ----------\n",
+    "    T : float\n",
+    "        The temperature.\n",
+    "    fn : callable\n",
+    "\n",
+    "    Returns\n",
+    "    -------\n",
+    "    callable\n",
+    "    \"\"\"\n",
+    "    T = float(T) \n",
+    "    return lambda x: fn(x / T)"
    ]
   },
   {
@@ -368,34 +465,72 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def create_model(model_type):\n",
-    "    if model_type == 'continuous_dense':\n",
+    "def create_model(model_type: str):\n",
+    "    if model_type == 'dense':\n",
     "        model = tf.keras.Sequential([\n",
-    "            CTHLayer(DenseRecon(activation=tf.tanh),\n",
-    "                     reg_factor=1),\n",
+    "            ContinuousTimeHopfieldLayer(\n",
+    "                DenseRecon(activation=tf.tanh),\n",
+    "                reg_factor=1),\n",
     "        ])\n",
-    "    elif model_type == 'continuous_cnn':\n",
+    "    elif model_type == 'cnn':\n",
     "        model = tf.keras.Sequential([\n",
-    "            CTHLayer(Conv2dRecon(filters=16, kernel_size=5, activation=tf.tanh,\n",
-    "                                 flatten=True),\n",
-    "                     reg_factor=1),\n",
+    "            ContinuousTimeHopfieldLayer(\n",
+    "                Conv2dRecon(\n",
+    "                    filters=16,\n",
+    "                    kernel_size=5,\n",
+    "                    activation=tf.tanh,\n",
+    "                    flatten=True,\n",
+    "                ),\n",
+    "                reg_factor=1),\n",
     "        ])\n",
     "    elif model_type == 'discrete_dense':\n",
     "        model = tf.keras.Sequential([\n",
-    "            DTHLayer(DenseRecon(activation=tf.tanh, binarize=sign),\n",
-    "                     max_steps=100,\n",
-    "                     reg_factor=1),\n",
+    "            DiscreteTimeHopfieldLayer(\n",
+    "                DenseRecon(\n",
+    "                    activation=tf.tanh,\n",
+    "                    binarize=sign,\n",
+    "                ),\n",
+    "                max_steps=100,\n",
+    "                reg_factor=1),\n",
     "        ])\n",
     "    elif model_type == 'discrete_cnn':\n",
     "        model = tf.keras.Sequential([\n",
-    "            DTHLayer(Conv2dRecon(filters=16, kernel_size=5,\n",
-    "                                 activation=tf.tanh, binarize=sign,\n",
-    "                                 flatten=True),\n",
-    "                     max_steps=100,\n",
-    "                     reg_factor=1),\n",
+    "            DiscreteTimeHopfieldLayer(\n",
+    "                Conv2dRecon(\n",
+    "                    filters=128,\n",
+    "                    kernel_size=3,\n",
+    "                    activation=tf.tanh,\n",
+    "                    binarize=sign,\n",
+    "                    flatten=True,\n",
+    "                ),\n",
+    "                max_steps=100,\n",
+    "                reg_factor=1),\n",
+    "        ])\n",
+    "    elif model_type == 'discrete_modern_dense':\n",
+    "        model = tf.keras.Sequential([\n",
+    "            DiscreteTimeHopfieldLayer(\n",
+    "                ModernDenseRecon(\n",
+    "                    memory=x_train[:100],\n",
+    "                    #n=100,\n",
+    "                    activation=tempered(0.1, tf.nn.softmax),\n",
+    "                    binarize=sign,\n",
+    "                ),\n",
+    "                max_steps=100,\n",
+    "                reg_factor=1),\n",
+    "        ])\n",
+    "    elif model_type == 'continuous_modern_dense':\n",
+    "        model = tf.keras.Sequential([\n",
+    "            ContinuousTimeHopfieldLayer(\n",
+    "                ModernDenseRecon(\n",
+    "                    memory=x_train[:100],\n",
+    "                    #n=100,\n",
+    "                    activation=tempered(0.1, tf.nn.softmax),\n",
+    "                    binarize=sign,\n",
+    "                ),\n",
+    "                reg_factor=1),\n",
     "        ])\n",
     "    else:\n",
-    "        raise ValueError()\n",
+    "        raise ValueError(f'Unknown model type: \"{model_type}\".')\n",
     "    model.compile(optimizer='adam')\n",
     "    return model"
    ]
@@ -417,13 +552,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "7813/7813 [==============================] - 39s 5ms/step - loss: 0.0376\n"
+      "7813/7813 [==============================] - 40s 5ms/step - loss: 0.0000e+00\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7f9fe45ab990>"
+       "<tensorflow.python.keras.callbacks.History at 0x7fab4a4e7510>"
       ]
      },
      "execution_count": 5,
@@ -432,7 +567,7 @@
     }
    ],
    "source": [
-    "model = create_model('discrete_dense')\n",
+    "model = create_model('discrete_modern_dense')\n",
     "X = x_train[:100].numpy()\n",
     "ds0 = tf.data.Dataset.from_tensor_slices(X)\n",
     "ds = ds0.shuffle(10000).repeat(10000).batch(128)\n",
@@ -452,10 +587,10 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dth_layer (DTHLayer)         (None, 1024)              1048577   \n",
+      "discrete_time_hopfield_layer (None, 1024)              102401    \n",
       "=================================================================\n",
-      "Total params: 1,048,577\n",
-      "Trainable params: 1,048,576\n",
+      "Total params: 102,401\n",
+      "Trainable params: 102,400\n",
       "Non-trainable params: 1\n",
       "_________________________________________________________________\n"
      ]
@@ -467,14 +602,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Relax steps: 6\n",
+      "Relax steps: 1\n",
       "2.0 => 0.0\n"
      ]
     }
@@ -529,7 +664,7 @@
    "source": [
     "### De-noising\n",
     "\n",
-    "1. However, CNN version is not robust to bit-flipping. Dense version is still very robust to it. Bit-flipping fails for CNN version hints that the information is not sparsely (distributedly) stored. Thus it cannot re-construct the original bit only from the information stored in its local neighbors. (Notice that bit-flipping creates non-smooth, thus always great, differences.) To see this, run the re-constructor on the bit-flipping noised inputs to see the 0.99-quantile of the re-construction error, comparing for both dense and CNN versions.\n",
+    "1. However, CNN version is not robust to bit-flipping. Dense version is still very robust to it. Bit-flipping fails for CNN version hints that the information is not sparsely (distributedly) stored. Thus it cannot re-construct the original bit only from the information stored in its local neighbors. (Notice that bit-flipping creates non-smooth, thus always great, differences.) To see this, run the re-constructor on the bit-flipping noised inputs to see the 0.99-quantile of the re-construction error, comparing for both dense and CNN versions. Increasing filters will not change the failure.\n",
     "\n",
     "1. Dense version gains 99% re-construction even for 40% bit-flipping."
    ]
@@ -569,9 +704,35 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Relation between Continuous and Discrete Time\n",
+    "\n",
+    "The continous time version, i.e. ODE version, and the discrete time version, i.e. iterative equation version, are related, since both of them can be regarded as root-finding. That is, find the root $x_{\\star}$ s.t. $x - f(x) = 0$. This root is the fixed point, or relaxition phase. The ODE version uses the gradient descent method, and the iterative equation version uses definition. Both of them will find one of the many roots, which is ensured by the Lyapunov functions of them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Modern Version\n",
+    "\n",
+    "1. If the kernel is initialized by giving memory, the learning is redundant, and the performance is, as expected, splendid.\n",
+    "\n",
+    "1. However, if the kernel is initialized by Glorot initializer as usual, the learning is hard, and the performance is terrible.\n",
+    "\n",
+    "1. If the memory is a subset of the training data, then performance is terrible again.\n",
+    "\n",
+    "1. If the weight is pruned, then the memory is destroyed too. However, this will not happen to the \"traditional\" version."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## References\n",
     "\n",
-    "1. Cellular automata as convolutional neural networks (arXiv: 1809.02942)."
+    "1. Cellular automata as convolutional neural networks (arXiv: 1809.02942).\n",
+    "\n",
+    "1. Blog: [Hopfield Networks is All You Need](https://ml-jku.github.io/hopfield-layers/)."
    ]
   },
   {
